fix overflow

--- a/family_hub_fe/src/app/components/events/events.component.css
+++ b/family_hub_fe/src/app/components/events/events.component.css
@@ -57,14 +57,13 @@
   flex-direction: column;
   padding: 10px;
   max-height: 90vh;
-  overflow-y: hidden;
-  overflow-x: auto;
+  overflow: auto;
 }
 
 .date-event-container {
   display: flex;
   align-items: center;
-  margin-bottom: 10px;
+  margin-bottom: 5px;
 }
 
 .events-list {
@@ -82,7 +81,7 @@
 ::ng-deep ::-webkit-scrollbar-thumb {
   background-color: var(--navbar-sidebar-color);
   border-radius: 10px;
-  border: 3px solid var(--button-active-color);
+  border: 3px solid var(--background-color);
 }
 
 
